tests/harness/errors/042_map_non_list.eu
# Mistake: applying a list operation (map) to a non-list value
x: 42
result: x map((+ 1))
